--- a/overrides/config/modernfix-mixins.properties
+++ b/overrides/config/modernfix-mixins.properties
@@ -1,3 +1,5 @@
 mixin.perf.blast_search_trees=false
+mixin.perf.clear_mixin_classinfo=true
+mixin.perf.dynamic_entity_renderers=true
 mixin.perf.dynamic_resources=true
 mixin.perf.faster_item_rendering=true
